<?xml version="1.0"?>
<package format="3">
  <name>ros2_project_sc23bzwl</name>
  <version>0.1.0</version>
  <description>ROS2 project package for COMP3631</description>
  <maintainer email="your.email@domain.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
